--- a/templates/login.html
+++ b/templates/login.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="static/css/templatemo-onix-digital.css">
     <link rel="stylesheet" href="static/css/animated.css">
     <link rel="stylesheet" href="static/css/owl.css">
+    <link rel="stylesheet" href="static/css/responsive.css">
 
     <style>
         /* Login form styles merged with the template style */
@@ -263,6 +264,11 @@
               <li class="scroll-to-section"><a href="aboutus">About Us</a></li>
             </ul>
             <!-- ***** Menu End ***** -->
+            <a class='menu-trigger'>
+              <span></span>
+              <span></span>
+              <span></span>
+            </a>
           </nav>
         </div>
       </div>
@@ -326,5 +332,6 @@
   <script src="static/js/animation.js"></script>
   <script src="static/js/imagesloaded.js"></script>
   <script src="static/js/custom.js"></script>
+  <script src="static/js/responsive-menu.js"></script>
 </body>
 </html>
