--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="static/css/templatemo-onix-digital.css">
     <link rel="stylesheet" href="static/css/animated.css">
     <link rel="stylesheet" href="static/css/owl.css">
-    <link rel="stylesheet" href="static/css/responsive.css">
 
     <style>
         :root {
@@ -280,9 +279,7 @@
               <li class="scroll-to-section"><div class="main-red-button-hover"><a href="#contact">Contact Us Now</a></div></li> 
             </ul>
                         <a class='menu-trigger'>
-                          <span></span>
-                          <span></span>
-                          <span></span>
+                            <span>Menu</span>
                         </a>
                         <!-- ***** Menu End ***** -->
                     </nav>
@@ -429,6 +426,5 @@
     <script src="static/js/animation.js"></script>
     <script src="static/js/imagesloaded.js"></script>
     <script src="static/js/custom.js"></script>
-    <script src="static/js/responsive-menu.js"></script>
 </body>
 </html>
