--- a/templates/register.html
+++ b/templates/register.html
@@ -19,7 +19,6 @@
     <link rel="stylesheet" href="static/css/templatemo-onix-digital.css">
     <link rel="stylesheet" href="static/css/animated.css">
     <link rel="stylesheet" href="static/css/owl.css">
-    <link rel="stylesheet" href="static/css/responsive.css">
 
     <style>
         .register-section {
@@ -296,11 +295,10 @@
                 <li class="scroll-to-section"><a href="logout">Logout</a></li>
               {% endif %}
               <li class="scroll-to-section"><a href="aboutus">About Us</a></li>
+               
             </ul>        
             <a class='menu-trigger'>
-              <span></span>
-              <span></span>
-              <span></span>
+                <span>Menu</span>
             </a>
             <!-- ***** Menu End ***** -->
           </nav>
@@ -384,7 +382,6 @@
   <script src="static/js/animation.js"></script>
   <script src="static/js/imagesloaded.js"></script>
   <script src="static/js/custom.js"></script>
-  <script src="static/js/responsive-menu.js"></script>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
