--- a/templates/result.html
+++ b/templates/result.html
@@ -2,20 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Translation Results - LOCOTO</title>
     <link href="static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="static/css/fontawesome.css">
-    <link rel="stylesheet" href="static/css/templatemo-onix-digital.css">
-    <link rel="stylesheet" href="static/css/animated.css">
-    <link rel="stylesheet" href="static/css/owl.css">
-    <link rel="stylesheet" href="static/css/responsive.css">
-    <style>        /* Navigation styles */
+    <link rel="stylesheet" href="static/css/templatemo-onix-digital.css">    <style>        /* Navigation styles */
         .header-area {
             background: #fff;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
@@ -118,11 +109,6 @@
                             <li class="scroll-to-section"><a href="/">Home</a></li>
                             <li class="scroll-to-section"><a href="upload">Upload</a></li>
                         </ul>
-                        <a class='menu-trigger'>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </a>
                     </nav>
                 </div>
             </div>
@@ -186,14 +172,6 @@
             </div>
         </div>
     </div>
-
-    <script src="static/vendor/jquery/jquery.min.js"></script>
-    <script src="static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="static/js/owl-carousel.js"></script>
-    <script src="static/js/animation.js"></script>
-    <script src="static/js/imagesloaded.js"></script>
-    <script src="static/js/custom.js"></script>
-    <script src="static/js/responsive-menu.js"></script>
 
     <script>
         // Get the results from the URL parameters
